--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "tech-2-task",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "~1.9.2",
+    "ejs": "^2.3.3",
     "express": "~4.9.8",
-    "jwt-simple": "^0.3.1",
+    "express-session": "^1.11.3",
+    "express-jwt": "^3.0.1",
+    "jsonwebtoken": "^5.0.2",
     "mongoose": "~4.2.4",
     "morgan": "~1.5.0",
     "passport": "^0.3.0",
     "passport-jwt": "^1.2.1",
-    "underscore": "*"
+    "lodash": "^3.10.0",
+    "request": "^2.58.0",
+    "q": "^1.4.1",
+    "rootpath": "^0.1.2"
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "description": "MEAN stack Expense tracker",
+  "repository": {
+    "type": "git",
+    "url": "http://git.toptal.com/diego.ferreyra/anujparikh1/tree/master"
+  }
 }
