fetch all expenses on client browser

--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "tech-2-task",
   "main": "server.js",
   "dependencies": {
+    "angular-smart-table": "^2.1.8",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.9.2",
     "ejs": "^2.3.3",
     "express": "~4.9.8",
-    "express-session": "^1.11.3",
     "express-jwt": "^3.0.1",
+    "express-session": "^1.11.3",
     "jsonwebtoken": "^5.0.2",
+    "lodash": "^3.10.0",
     "mongoose": "~4.2.4",
     "morgan": "~1.5.0",
     "passport": "^0.3.0",
     "passport-jwt": "^1.2.1",
-    "lodash": "^3.10.0",
-    "request": "^2.58.0",
     "q": "^1.4.1",
+    "request": "^2.58.0",
     "rootpath": "^0.1.2"
   },
   "version": "0.0.1",
